--- a/src/assets/css/common/TextArea.css
+++ b/src/assets/css/common/TextArea.css
@@ -1,7 +1,9 @@
 .label{
     width: 155px;
+    height: 270px;
+    align-content: center;
     text-align: left;
-    font-size: 14px;
+    font-size: 16px;
 }
 .contentBox{
     display: flex;
