--- a/src/assets/css/noticeDetail/Notice.css
+++ b/src/assets/css/noticeDetail/Notice.css
@@ -4,7 +4,7 @@
 }
 
 .title {
-  padding: 22px 30px;
+  padding: 20px 30px;
   font-size: 20px;
   font-weight: 600;
   flex-grow: 1;
@@ -21,7 +21,7 @@
 .content {
   padding: 30px;
   font-size: 16px;
-  height: 636px;
+  min-height: 450px;
   border-bottom: 1px solid #707070;
 }
 
@@ -31,10 +31,17 @@
   justify-content: center;
 }
 
-.backBtn {
-  border-radius: 5px;
+.listBtn{
   width: 200px;
-  height: 46px;
-  background-color: #5e5e5e;
-  color: #fff;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #707070;
+  border-radius: 5px;
+  font-size: 18px;
+}
+.listBtn:hover{
+  background-color: #5E5E5E;
+  color: white;
 }
