--- a/src/assets/css/review/Products.css
+++ b/src/assets/css/review/Products.css
@@ -1,7 +1,10 @@
 .wrapper {
-  margin-top: 30px;
+  margin-top: 20px;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: repeat(4, 1fr);
-  gap: 50px;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 21px;
+}
+.reviewCard{
+  cursor: pointer;
 }
