--- a/src/assets/css/home/Contents.css
+++ b/src/assets/css/home/Contents.css
@@ -8,6 +8,7 @@
 .backgroundWrapper {
   padding: 0;
   position: relative;
+  cursor: pointer;
 }
 
 .descWrapper {
@@ -17,53 +18,46 @@
 }
 
 .nameWrapper {
-  margin-top: 15px;
+  margin-top: 10px;
   display: flex;
-  gap: 20px;
+  gap: 10px;
   align-items: flex-end;
+}
+
+.nameLabel{
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: -0.14px;
+  text-decoration: underline;
+  text-decoration-color: #575757;
+  text-underline-offset: 5px;
 }
 
 .productBlackName {
   color: #575757;
-  text-align: center;
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: -0.14px;
-  text-decoration: underline;
-  text-underline-offset: 5px;
 }
 
 .productWhiteName {
   color: #fff;
-  text-align: center;
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: -0.14px;
-  text-decoration: underline;
-  text-underline-offset: 5px;
 }
 
-
+.productName{
+  font-size: 30px;
+  font-weight: 600;
+  letter-spacing: -2px;
+}
 
 .firstName {
   color: #373737;
-  font-size: 40px;
-  font-weight: 600;
-  letter-spacing: -2px;
 }
 
 .secondName {
   color: #512c96;
-  font-size: 40px;
-  font-weight: 600;
-  letter-spacing: -2px;
 }
 
 .thirdName {
   color: #169882;
-  font-size: 40px;
-  font-weight: 600;
-  letter-spacing: -2px;
 }
 
 .backgroundImgs {
@@ -74,6 +68,6 @@
   transition: all 0.2s;
 }
 
-.backgroundWrapper:hover .arrowWrapper {
+/* .backgroundWrapper:hover .arrowWrapper {
   transform: translateX(50px);
-}
+} */
