--- a/src/assets/css/layouts/Nav.css
+++ b/src/assets/css/layouts/Nav.css
@@ -1,7 +1,9 @@
 .nav {
   display: flex;
-  padding: 28px 29px;
   justify-content: center;
+  height: 60px;
+  border-bottom: 1px solid #b3b3b3;
+  margin-bottom: 20px;
 }
 
 .navList {
