--- a/src/assets/css/editor/FileInput.css
+++ b/src/assets/css/editor/FileInput.css
@@ -1,7 +1,7 @@
 .fileUpload{
     display: flex;
     align-items: flex-start;
-    margin: 12px;
+    margin: 12px 12px 0px 12px;
     gap: 8px;
 }
 .selectFileBtn{
