--- a/src/assets/css/renewalHome/IntroDeskTop.css
+++ b/src/assets/css/renewalHome/IntroDeskTop.css
@@ -2,12 +2,83 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 1920px;
-    height: 730px;
-}
-.introContent{
-    margin-top: 85px;
-    width: 1400px;
+    padding-top: 85px;
     margin: auto;
+    height: 730px;
+    background-image: url("@/assets/images/HomeIntroBackGround.jpg");
+}
+.introContents{
+    width: 1400px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+.logoContainer{
+    font-size: 32px;
+    font-weight: 900;
+    text-align: center;
+    gap: 10px;
+}
+.introLogo{
+    width: 80px;
+    height: 57px;
+    object-fit: cover;
+}
+.textContainer{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: center;
+    margin-top: 20px;
     
+}
+.introBtn{
+    width:168px;
+    height: 60px;
+    border-radius: 50px;
+    border: 1px solid #B51717;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 900;
+    margin: 20px auto 0px auto;
+}
+
+
+.infiniteImgWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    overflow: hidden;
+    flex-wrap: nowrap;
+    width: 1800px;
+    margin: auto;
+}
+.imgContainer{
+    width: 1800px;
+    height: 304px;
+    display: flex;
+    transition: all 1s linear;
+    animation: infiniteMove 42s linear infinite;
+}
+.imgBox{
+    width: 300px;
+    height: 304px;
+}
+.infiniteImg{
+    width: 300px;
+    height: 304px;
+    object-fit: cover;
+}
+
+@keyframes infiniteMove{
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(-1800px);
+    }
 }
