PC version fisnish & mobile Home

--- a/src/assets/css/renewalHome/DeskTopContents.css
+++ b/src/assets/css/renewalHome/DeskTopContents.css
@@ -7,3 +7,9 @@
 .ProductSection{
     position: relative;
 }
+.BannerSection{
+    position: relative;
+}
+.NewsSection{
+    position: relative;
+}
