--- a/src/assets/css/layouts/RenewalHeader.css
+++ b/src/assets/css/layouts/RenewalHeader.css
@@ -1,4 +1,7 @@
 .header{
+    position: fixed;
+    z-index: 100;
+    background-color: white;
     width: 100%;
     border-bottom: 1px solid #EEEEEE;
 }
