--- a/src/assets/css/renewalHome/deskTop/IntroDeskTop.css
+++ b/src/assets/css/renewalHome/deskTop/IntroDeskTop.css
@@ -2,7 +2,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding-top: 85px;
     margin: auto;
     height: 730px;
     background-image: url("@/assets/images/HomeIntroBackGround.jpg");
@@ -13,6 +12,7 @@
     justify-content: center;
     align-items: center;
     margin: auto;
+    padding-top: 85px;
 }
 .logoContainer{
     font-size: 32px;
@@ -28,7 +28,7 @@
 .textContainer{
     font-size: 20px;
     font-weight: 500;
-    line-height: 1.2;
+    line-height: 1.3;
     text-align: center;
     margin-top: 20px;
     
@@ -42,8 +42,13 @@
     justify-content: center;
     align-items: center;
     font-size: 18px;
-    font-weight: 900;
+    font-weight: 500;
     margin: 20px auto 0px auto;
+}
+.introBtn:hover{
+    font-weight: 900;
+    border: 2px solid #B51717;
+    color: #B51717;
 }
 
 
@@ -54,23 +59,23 @@
     margin-top: 20px;
     overflow: hidden;
     flex-wrap: nowrap;
-    width: 1800px;
     margin: auto;
 }
 .imgContainer{
-    width: 1800px;
+    width: 1300px;
     height: 304px;
     display: flex;
     transition: all 1s linear;
     animation: infiniteMove 42s linear infinite;
 }
 .imgBox{
-    width: 300px;
-    height: 304px;
+    margin-top: 40px;
+    width: 260px;
+    height: 260px;
 }
 .infiniteImg{
-    width: 300px;
-    height: 304px;
+    width: 260px;
+    height: 260px;
     object-fit: cover;
 }
 
@@ -79,6 +84,6 @@
         transform: translateX(0);
     }
     100%{
-        transform: translateX(-1800px);
+        transform: translateX(calc(-260px * 5));
     }
 }
