--- a/src/assets/css/renewalHome/deskTop/ProductDeskTop.css
+++ b/src/assets/css/renewalHome/deskTop/ProductDeskTop.css
@@ -3,11 +3,12 @@
     margin: 120px auto 0px auto;
 }
 
-.menuConatainer{
-    width: 250px;
+.menuContainer{
+    display: flex;
+    justify-content: space-between;
 }
 .menuTitle{
-    line-height: 1.2;
+    line-height: 1.3;
 }
 .subTitle{
     font-size: 20px;
@@ -18,9 +19,9 @@
     font-weight: 900;
 }
 .linkBox{
-    width: 100%;
     display: flex;
     justify-content: right;
+    align-items: end;
 }
 .linkTo{
     font-size: 16px;
@@ -54,6 +55,11 @@
     color: #ADADAD;
     font-size: 16px;
 }
+.active{
+    border: 2px solid #A70000;
+    color: #A70000;
+    font-weight: 900;
+}
 .menuBtn:hover{
     border: 2px solid #A70000;
     color: #A70000;
@@ -64,14 +70,12 @@
     width: 1150px;
     height: 400px;
     background-color: #F5F5F5;
-    padding-top: 37px;
-    padding-left: 58px;
     display: flex;
     border-radius: 10px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.leftContet{
-    padding-top: 33px;
+.leftContent{
+    padding-top: 57px;
+    padding-left: 66px;
 }
 .nameBox{
 }
@@ -90,6 +94,7 @@
     font-weight: 500;
     line-height: 1.6;
 }
+
 .gotoStore{
     margin-top: 116px;
     width: 162px;
@@ -115,8 +120,18 @@
     color: #A70000;
     font-weight: 900;
 }
-
 .rightContent{
-    margin-left: 64px;
-    margin-top: 44px;
+    width: 887px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.imageBox{
+    width: 662px;
+    height: 326px;
+}
+.imgSrc{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
