--- a/src/assets/css/renewalHome/mobile/IntroMobile.css
+++ b/src/assets/css/renewalHome/mobile/IntroMobile.css
@@ -1,7 +1,4 @@
 .introWrapper{
-    /* position: absolute; */
-    /* top: 0;
-    left: 0; */
     margin: auto;
     height: 565px;
     background-image: url("@/assets/images/HomeIntroBackGround.jpg");
@@ -14,20 +11,21 @@
     padding-top: 85px;
 }
 .logoContainer{
-    font-size: 32px;
+    font-size: 20px;
     font-weight: 900;
     text-align: center;
     gap: 10px;
 }
 .introLogo{
-    width: 80px;
-    height: 57px;
+    width: 65px;
+    height: 47px;
     object-fit: cover;
+    margin-bottom: 5px;
 }
 .textContainer{
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 500;
-    line-height: 1.3;
+    line-height: 1.6;
     text-align: center;
     margin-top: 20px;
     
@@ -40,8 +38,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 600;
     margin: 20px auto 0px auto;
 }
 .introBtn:hover{
@@ -58,24 +56,24 @@
     margin-top: 20px;
     overflow: hidden;
     flex-wrap: nowrap;
-    width: 1920px;
+    /* width: 100vw; */
     margin: auto;
 }
 .imgContainer{
-    width: 1300px;
+    width: calc(185px * 5);
     height: 304px;
     display: flex;
     transition: all 1s linear;
-    animation: infiniteMove 42s linear infinite;
+    animation: infiniteMove 32s linear infinite;
 }
 .imgBox{
-    margin-top: 40px;
-    width: 260px;
-    height: 260px;
+    margin-top: 20px;
+    width: 185px;
+    height: 185px;
 }
 .infiniteImg{
-    width: 260px;
-    height: 260px;
+    width: 185px;
+    height: 185px;
     object-fit: cover;
 }
 
@@ -84,6 +82,6 @@
         transform: translateX(0);
     }
     100%{
-        transform: translateX(calc(-260px * 5));
+        transform: translateX(calc(-185px * 5));
     }
 }
