--- a/src/assets/css/common/Product.css
+++ b/src/assets/css/common/Product.css
@@ -1,14 +1,15 @@
 .productItem {
-  width: 19%;
+  width: calc(1400px/4 - 48px);
 }
 
 .imgWrapper {
   width: 100%;
-  height: 344px;
+  height: calc(1400px/4 - 48px);
   cursor: pointer;
   transition: all 1s;
   overflow: hidden;
   position: relative;
+  border-radius: 10px;
 }
 
 .normalImg {
@@ -17,7 +18,7 @@
   object-fit: cover;
 }
 
-.productImg {
+/* .productImg {
   position: absolute;
   top: 58%;
   left: 50%;
@@ -25,9 +26,9 @@
   z-index: 9999;
   width: 75%;
   transition: all 0.2s;
-  border-radius: 8px;
+  border-radius: 10px;
   box-shadow: 0px 4px 4px 1px rgba(0, 0, 0, 0.25);
-}
+} */
 
 .backgroundImg {
   position: absolute;
@@ -35,7 +36,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  transition: all 0.2s;
+  transition: all 0.4s;
   object-fit: cover;
 }
 
