--- a/src/assets/css/common/CustomBoardTable.css
+++ b/src/assets/css/common/CustomBoardTable.css
@@ -33,28 +33,35 @@
   border-right: none;
 }
 .isClicked{
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .tableRow {
-    display: flex;
-    height: 60px;
-    width: 100%; /* 각 행의 너비 100% */
-    align-items: center;
-    cursor: pointer;
-    background-color: white;
+  display: flex;
+  height: 80px;
+  width: 100%; /* 각 행의 너비 100% */
+  align-items: center;
+  cursor: pointer;
+  background-color: white;
 }
 .tableRow:hover{
-    background-color: #F9FAFC;
+  background-color: #F9FAFC;
     
 }
 .contentBox{
-    padding: 15px;
-    font-size: 16px;
-    min-height: 100px;
-    border-top: 1px solid #ccc;
-    text-align: left;
+  padding: 23px 0px 23px 0px;
+  font-size: 16px;
+  min-height: 80px;
+  border-top: 1px solid #ccc;
+  text-align: left;
+}
+.QnAMark{
+  display: block;
+  font-size: 18px;
+  font-weight: 900;
+  text-align: center;
 }
 .comment{
-    background-color: #F9FAFC;
+  background-color: #F9FAFC;
+  display: flex;
 }
