--- a/src/assets/css/renewalProduct/MobileContents.css
+++ b/src/assets/css/renewalProduct/MobileContents.css
@@ -1,13 +1,21 @@
 .textWrapper{
-    margin-top: 100px;
-    margin-bottom: 25px;
+    display: flex;
+    justify-content: center;
+    margin: 50px auto 20px auto;
 }
 .text{
-    width: 1400px;
-    margin: auto;
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 900;
     text-decoration: underline;
     text-underline-offset: 5px;
+}
+.productWrapper{
+    padding: 0px 15px;
+}
+.productList{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 30px;
 }
