--- a/src/assets/css/layouts/RenewalBoardMobileNav.css
+++ b/src/assets/css/layouts/RenewalBoardMobileNav.css
@@ -1,8 +1,17 @@
+.titleBox{
+    text-align: center;
+    margin: 50px auto 20px auto;
+}
+.title{
+    font-size: 20px;
+    font-weight: 900;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
 .nav{
     height: 60px;
     align-content: center;
-    margin-top: 25px;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     border-top: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
 }
@@ -10,11 +19,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1400px;
-    gap: 80px;
+    gap: 30px;
     margin: auto;
 }
 .navItem{
-    font-size: 20px;
+    font-size: 16px;
     color: #AFAFAF;
 }
