--- a/src/assets/css/layouts/RenewalHeader.css
+++ b/src/assets/css/layouts/RenewalHeader.css
@@ -4,6 +4,8 @@
     background-color: white;
     width: 100%;
     border-bottom: 1px solid #EEEEEE;
+    /* overflow-x: scroll;
+    scrollbar-width: none; */
 }
 .header:hover{
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.1);
@@ -12,6 +14,7 @@
     width: 1400px;
     height: 90px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     margin: auto;
 }
@@ -34,7 +37,6 @@
 }
 
 .navContainer{
-    width: 590px;
     position: relative;
 }
 
@@ -42,10 +44,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 100;
+    gap: 30px;
 }
 .nav > li{
-    width: 128px;
+    width: 110px;
     height: 90px;
     text-align: center;
     align-content: center;
@@ -62,7 +64,7 @@
     z-index: 100;
 }
 .dropItem{
-    width: 128px;
+    width: 110px;
     height: 40px;
     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
     cursor: pointer;
