--- a/src/assets/css/renewalIntro/mobile/IntroValue.css
+++ b/src/assets/css/renewalIntro/mobile/IntroValue.css
@@ -17,7 +17,7 @@
 
 .valueWrapper{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 25px;
