--- a/src/assets/css/renewalIntro/deskTop/IntroText.css
+++ b/src/assets/css/renewalIntro/deskTop/IntroText.css
@@ -24,15 +24,19 @@
     justify-content: center;
     align-items: center;
     width: 1400px;
+    height: 125px;
     margin: auto;
-    padding: 110px 0px 25px 0px;
+    padding: 80px 0px 10px 0px;
     overflow: hidden;
 }
 .slogan{
-    font-size: 46px;
-    font-weight: 900;
-    color: white;
-    -webkit-text-stroke: 1px black; 
+    font-size: 80px;
+    font-weight: 800;
+    color: #303030;
+    transition: all 0.2s;
+    letter-spacing: 40px;
+    opacity: 0;
+    /* -webkit-text-stroke: 1px black;  */
     /* animation: rise 1s ease, changeColor .5s ease-in .5s forwards; 
     animation-delay: changeColor 0.5s;  */
 }
