--- a/src/assets/css/renewalIntro/mobile/IntroText.css
+++ b/src/assets/css/renewalIntro/mobile/IntroText.css
@@ -25,12 +25,16 @@
     margin: auto;
     padding: 100px 0px 100px 0px;
     overflow: hidden;
+    height: 145px;
 }
 .slogan{
     font-size: 30px;
-    font-weight: 900;
-    color: white;
-    -webkit-text-stroke: 1px black; 
+    font-weight: 800;
+    color: #303030;
+    transition: all 0.2s;
+    opacity: 0;
+    letter-spacing: 10px;
+    /* -webkit-text-stroke: 1px black;  */
     /* animation: rise 1s ease, changeColor .5s ease-in .5s forwards; 
     animation-delay: changeColor 0.5s;  */
 }
