--- a/src/assets/css/renewalBoard/MobileContents.css
+++ b/src/assets/css/renewalBoard/MobileContents.css
@@ -1,9 +1,9 @@
 .titleBox{
     margin: 100px auto 25px auto;
 }
-.title{
+/* .title{
     font-size: 24px;
-    font-weight: 900;
+    font-weight: 800;
     text-decoration: underline;
     text-underline-offset: 5px;
-}
+} */
