--- a/src/assets/css/renewalIntro/mobile/IntroText.css
+++ b/src/assets/css/renewalIntro/mobile/IntroText.css
@@ -10,7 +10,7 @@
 }
 .title{
     font-size: 20px;
-    font-weight: 900;
+    font-weight: 700;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
@@ -23,9 +23,11 @@
     justify-content: center;
     align-items: center;
     margin: auto;
-    padding: 100px 0px 100px 0px;
+    padding: 50px 0px;
     overflow: hidden;
     height: 145px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .slogan{
     font-size: 30px;
