--- a/src/assets/css/renewalBoardDetail/mobile/Detail.css
+++ b/src/assets/css/renewalBoardDetail/mobile/Detail.css
@@ -56,6 +56,7 @@
   border: 1px solid #707070;
   border-radius: 5px;
   font-size: 18px;
+  color: black;
 }
 .listBtn:hover{
   background-color: black;
