--- a/src/assets/css/renewalHome/deskTop/NewsDeskTop.css
+++ b/src/assets/css/renewalHome/deskTop/NewsDeskTop.css
@@ -88,6 +88,7 @@
     color: #222222;
     border: 1px solid #222222;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 .btn:hover{
     font-weight: 800;
