--- a/src/assets/css/renewalHome/mobile/IntroMobile.css
+++ b/src/assets/css/renewalHome/mobile/IntroMobile.css
@@ -39,6 +39,7 @@
     font-size: 16px;
     font-weight: 600;
     margin: 20px auto 0px auto;
+    color: black;
 }
 .introBtn:hover{
     font-weight: 800;
