--- a/src/assets/css/renewalHome/mobile/NewsMobile.css
+++ b/src/assets/css/renewalHome/mobile/NewsMobile.css
@@ -82,6 +82,7 @@
     color: #222222;
     border: 1px solid #222222;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 .btn:hover{
     font-weight: 800;
