--- a/src/assets/css/common/CustomTable.css
+++ b/src/assets/css/common/CustomTable.css
@@ -1,5 +1,4 @@
 .tableContainer {
-  border: 1px solid #ccc;
   overflow: hidden;
   background-color: white;
 }
@@ -7,7 +6,6 @@
 .tableHeader{
     display: flex;
     width: 100%; /* header와 body의 너비 일치 */
-    justify-content: center;
     background-color: #4E4E4E;
     color: white;
     align-items: center;
@@ -24,7 +22,6 @@
 }
 
 .tableBody > div {
-  border-top: 1px solid #ccc;
 }
 
 .tableHeader > div:last-child,
@@ -34,7 +31,38 @@
 
 .tableRow {
     display: flex;
-    height: 70px;
+    min-height: 70px;
     width: 100%; /* 각 행의 너비 100% */
     align-items: center;
+}
+
+.tableRow > div {
+  font-size: 14px; 
+  min-height: 70px;
+  border: 1px solid #ddd;
+  text-align: center;
+  text-wrap: balance;
+  align-content: center;
+}
+
+.tableRow > div:last-child {
+  border-right: none;
+}
+
+.tableRow > div:first-child {
+  border-left: none;
+}
+
+.action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #4E4E4E;
+  padding: 12px;
+  border-radius: 6px;
+  background-color: white;
+}
+.action:hover {
+  background-color: #4E4E4E;
+  color: white;
 }
