--- a/src/assets/css/layouts/AdminSideBar.css
+++ b/src/assets/css/layouts/AdminSideBar.css
@@ -1,33 +1,27 @@
 .container{
     width: 300px;
+    box-shadow: 2px 0px 6px 0px rgba(0, 0, 0, 0.15);
+    z-index: 1;
 }
-.logoBox{
-    display: flex;
-    height: 120px;
-    justify-content: center;
-    align-items: center;
-}
+
 .listBox{
-    padding:12px;
+    padding-top: 20px;
 }
 .list{
-    padding: 12px;
-    height:30px;
+    padding: 12px 12px 12px 30px;
+    height: 30px;
     font-size: 18px;
-    border-radius: 6px;
     align-items: center;
     display: flex;
 }
 
 .listdownBox{
     background-color: #F6F6F6;
-    padding: 12px;
-    border-radius: 6px;
 }
 .listdown{
-    padding: 12px;
+    padding-left: 30px;
     font-size: 18px;
-    border-radius: 6px;
+    height: 50px;
     align-items: center;
     display: flex;
     justify-content: space-between;
@@ -38,11 +32,11 @@
 }
 
 .selectedListdown{
-    font-weight: 600;   
+    font-weight: 700;   
 }
 .selected{
     background:#e9e9e9;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 a{
