--- a/src/assets/css/modal/RenewalEnrollModal.css
+++ b/src/assets/css/modal/RenewalEnrollModal.css
@@ -2,11 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 2;
 }
 .filter{
     background-color: rgba(0,0,0,0.5);
@@ -56,7 +57,7 @@
 }
 
 .field{
-    flex: 0.25;
+    flex: 0 1 65px;
     padding: 10px 0px;
     text-align: right;
     font-size: 16px;
@@ -64,28 +65,91 @@
     align-content: center;
 }
 .inputBox{
-    flex: 2;
+    flex: 1;
     border: 1px solid #C5C5C5;
     padding: 10px;
     align-content: center;
 }
 
-textarea{
-    flex: 2;
+.textarea{
+    flex: 1;
     border: 1px solid #C5C5C5;
     padding: 10px;
     outline: none;
 }
 
-input[type="text"]{
+.select{
+    width: 100px;
+    border: 1px solid #C5C5C5;
+    font-size: 14px;
+    color: #969696;
+    padding-left: 10px;
+}
+.select:focus{
+    outline: none;
+}
+
+
+.input[type="text"]{
     width: 100%;
     font-size: 14px;
     border: none;
 }
-input[type="text"]:focus{
+
+.input[type="text"]:focus{
     outline: none;
 }
-input[type="text"]::placeholder{
+.input[type="text"]::placeholder{
     font-size: 14px;
     color: #969696;
+}
+
+.imgFileBox{
+    flex: 2;
+    border: 1px solid #C5C5C5;
+    padding: 10px;
+    outline: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.fileName{
+    font-size: 16px;
+    color: black;
+    font-weight: 500;
+}
+.placeHolder{
+    font-size: 14px;
+    color: #969696;
+}
+.uploadButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E9E9E9;
+    width: 65px;
+    height: 30px;
+    border-radius: 50px;
+    font-size: 16px;
+    font-weight: 500;
+    color: black;
+    cursor: pointer;
+}
+
+.buttonBox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.button{
+    width: 100px;
+    height: 46px;
+    align-content: center;
+    text-align: center;
+    background-color: #d9d9d9;
+    color: black;
+    font-size: 16px;
+    font-weight: 800;
+    border-radius: 5px;
 }
